--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<video id="video" autoplay style="
+	<video id="video" playsinline style="
 		position: fixed;
 		top: 50%;
 		left: 50%;
@@ -19,24 +19,41 @@
 		background: no-repeat;
 		background-size: cover;"></video>
 	<a-scene>
-		<a-video src="./video/Appello.mp4" position="0 0 -1.2" muted rotation="0 0 0" scale="0.5 0.25 0.25" play>
+		<a-video id="appello" src="./video/Appello.mp4" position="0 0 -1.2" rotation="0 0 0" scale="0.5 0.25 0.25">
 		</a-video>
 		<a-entity camera look-controls></a-entity>
 	</a-scene>
 
+	<button id="startButton" style="
+		position: fixed;
+		top: 50%;
+		left: 50%;
+		transform: translateX(-50%) translateY(-50%);
+		padding: 20px;
+		font-size: 20px;
+		z-index: 100;">Start</button>
+
 	<script>
 		const video = document.querySelector('#video');
+		const video2 = document.querySelector('#appello');
+		const startButton = document.querySelector('#startButton');
 		const constraints = { video: true };
 
-		navigator.mediaDevices.getUserMedia(constraints)
-			.then((stream) => {
-				video.srcObject = stream;
-				video.play();
-				const scene = document.querySelector('a-scene');
-				scene.addEventListener('loaded', () => {
-					scene.setAttribute('background', 'src: #video');
+		startButton.addEventListener('click', function () {
+			navigator.mediaDevices.getUserMedia(constraints)
+				.then((stream) => {
+					video.srcObject = stream;
+
+					video.play();
+					video2.play();
+
+					const scene = document.querySelector('a-scene');
+					scene.addEventListener('loaded', () => {
+						scene.setAttribute('background', 'src: #video');
+					});
+					startButton.style.display = 'none';
 				});
-			});
+		}, false);
 	</script>
 </body>
 
